MODFIN-283 code smells