@@ -12,6 +12,7 @@ import static org.folio.rest.util.ResourcePathResolver.resourcesPath;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.folio.rest.core.RestClient;
@@ -67,10 +68,10 @@ public class FundService {
     return collectResultsOnSuccess(
       ofSubLists(new ArrayList<>(fundIds), MAX_IDS_FOR_GET_RQ)
         .map(ids -> getFundsByIds(ids, requestContext))
-        .toList())
+        .collect(Collectors.toList()))
       .map(lists -> lists.stream()
         .flatMap(Collection::stream)
-        .toList()
+        .collect(Collectors.toList())
     );
   }
 
