@@ -10,6 +10,7 @@ import static org.folio.rest.util.ResourcePathResolver.resourceByIdPath;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -44,7 +45,7 @@ public class CommonTransactionService extends BaseTransactionService {
   public Future<List<Transaction>> retrieveTransactions(List<BudgetExpenseClass> budgetExpenseClasses, SharedBudget budget, RequestContext requestContext) {
     List<String> ids = budgetExpenseClasses.stream()
       .map(BudgetExpenseClass::getExpenseClassId)
-      .toList();
+      .collect(Collectors.toList());
     String query = String.format("(fromFundId==%s OR toFundId==%s) AND fiscalYearId==%s AND %s", budget.getFundId(), budget.getFundId(), budget.getFiscalYearId(), convertIdsToCqlQuery(ids, "expenseClassId", true));
     return retrieveTransactions(query, 0, Integer.MAX_VALUE, requestContext)
       .map(TransactionCollection::getTransactions);
@@ -54,12 +55,12 @@ public class CommonTransactionService extends BaseTransactionService {
     List<Future<List<Transaction>>> futures = StreamEx
       .ofSubLists(fundIds, MAX_IDS_FOR_GET_RQ)
       .map(ids ->  retrieveTransactionsChunk(buildGetTransactionsQuery(fiscalYearId, ids), requestContext))
-      .toList();
+      .collect(Collectors.toList());
 
     return collectResultsOnSuccess(futures)
       .map(listList -> listList.stream()
         .flatMap(Collection::stream)
-        .toList()
+        .collect(Collectors.toList())
       );
   }
 
